syntax = "proto3";

package io.github.sibmaks.spring.jfr.dto.protobuf.connections;

option java_multiple_files = true;
option java_package = "io.github.sibmaks.spring.jfr.dto.protobuf.connections";

message ConnectionException {
  int64 type = 1;
  int64 message = 2;
}

message ConnectionEvent {
  int64 index = 1;
  int64 action = 2;
  ConnectionException exception = 3;
  int64 started_at = 4;
  int64 finished_at = 5;
  int64 thread_name = 6;
  optional int32 transaction_isolation = 7;
}

message Connection {
  repeated ConnectionEvent events = 1;
  string id = 2;
  int64 duration = 3;
  bool has_exceptions = 4;
}

message ConnectionList {
  repeated Connection connections = 1;
}

message ConnectionMap {
  map<int64, ConnectionList> connections = 1;
}

message ConnectionsReport {
  map<int64, ConnectionMap> contexts = 1;
}